XD-7 - Tuple data structure Add getters for BigDecimal and Date types that take default values.  Added RawString getter.  Polished Javadocs